direnv with lenient yaml